--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "type": "git",
     "url": "https://github.com/john-lemon/gauge.git"
   },
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-uglify": "^1.0.1",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-rename": "^1.2.0"
+  },
   "keywords": [
     "Gauge"
   ],
@@ -20,3 +26,4 @@
   },
   "homepage": "https://github.com/john-lemon/gauge"
 }
+
